@@ -933,7 +933,7 @@ void increase_time_level(np_t *np, gl_t *gl){
   gl->time+=gl->dt;
   gl->iter=0;
   add_double_to_codex(&(gl->cycle.codex),"time",gl->time);
-  gl->timelevelcnt++;  
+  gl->timelevel++;  
   for_ijk(gl->domain_lim,is,js,ks,ie,je,ke){
         l=_ai(gl,i,j,k);
         if ((is_node_valid(np[_ai(gl,i,j,k)],TYPELEVEL_FLUID))){
@@ -1319,7 +1319,7 @@ void update_runtime_codex_vars_except_xi_from_gl(gl_t *gl, SOAP_codex_t *codex){
   add_double_to_codex(codex,"time",gl->time);  
 #endif
   add_double_to_codex(codex,"CFL",gl->CFL);
-  add_int_to_codex(codex,"timelevelcnt",gl->timelevelcnt);
+  add_int_to_codex(codex,"timelevel",gl->timelevel);
 #ifdef UNSTEADY
   add_double_to_codex(codex,"dt",gl->dt);
 #endif
